# biothreat-eval

./: .env.example  .gitignore  .hfignore  CITATION.cff  CONTRIBUTING.md  FORMAL_MODEL.md  MANIFEST.in  README.md  RESPONSIBLE_DISCLOSURE.md  SAFETY.md  SECURITY.md  behavior_analysis.py  brief_generator.py  config.py  evaluator.py  figures.py  generate_query_bank.py  llm_client.py  models.py  policy_mapper.py  proxy_queries.py  pyproject.toml  risk_model.py  run.py  taxonomy.py  threat_scenarios.py  uplift_calculator.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  safety_concern.yml
.github/workflows/: tests.yml
data/processed/: behavioral_profiles.json
data/raw/: example_queries.json  query_bank_schema.json
docs/: HUGGINGFACE.md  RELEASE_CHECKLIST.md
results/: policy_recommendations.json  risk_assessment.json  sensitivity_sweeps.json  uplift_results.json
results/policy_briefs/: public_summary.md
results/reports/: behavioral_analysis.md  sensitivity_analysis.md
scripts/: convert_to_hf.py
tests/: __init__.py  test_behavior_analysis.py  test_brief_generator.py  test_evaluator.py  test_integration.py  test_llm_client.py  test_policy_mapper.py  test_release_artifacts.py  test_risk_model.py  test_taxonomy.py  test_uplift_calculator.py
