[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biothreat-eval"
version = "1.0.0"
description = "LLM biosecurity capability evaluation and quantitative risk assessment pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "JangKeun Kim" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0,<2.0",
    "openai>=1.30,<2.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]
hf = ["huggingface_hub[cli]>=0.16.0"]

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "data*", "results*", "hf_data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[project.urls]
Repository = "https://github.com/jang1563/biothreat-eval"
Dataset = "https://huggingface.co/datasets/jang1563/biothreat-eval"
