[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biothreat-eval"
version = "1.0.0"
description = "LLM biosecurity capability evaluation and quantitative risk assessment pipeline"
readme = "README.md"
license = "MIT"
authors = [
    { name = "JangKeun Kim" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0,<2.0",
    "openai>=1.30,<2.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]
hf = ["huggingface_hub[cli]>=0.16.0"]

[tool.setuptools]
py-modules = [
    "behavior_analysis",
    "brief_generator",
    "config",
    "evaluator",
    "figures",
    "generate_query_bank",
    "llm_client",
    "models",
    "policy_mapper",
    "proxy_queries",
    "risk_model",
    "run",
    "taxonomy",
    "threat_scenarios",
    "uplift_calculator",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Long lines in these files are deliberate content strings — the LLM judge
# rubric (few-shot prompt text) and the Hugging Face dataset-card markdown —
# not code that should be wrapped.
"evaluator.py" = ["E501"]
"scripts/convert_to_hf.py" = ["E501"]

[project.urls]
Repository = "https://github.com/jang1563/biothreat-eval"
Dataset = "https://huggingface.co/datasets/jang1563/biothreat-eval"
